welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: not found: value methodeAppeleeparlecompilateur
methodeAppeleeparlecompilateur()// tout ceci est ignoré 
^Source:2: error: not found: value autreappel
autreappel()/* ceci est également ignoré */
^Source:3: error: not found: value encoreUneAutreappel
encoreUneAutreappel() 
^