welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
methodeAppeleeparlecompilateur()// tout ceci est ignoré 
autreappel()/* ceci est également ignoré */
encoreUneAutreappel()